--- a/README
+++ b/README
@@ -9,7 +9,13 @@ The original motivation for the project was my desire to be able to programmatic
 
 CREDITS
 =======
-Without access to the official JPEG specs (they seem a little expensive for my hobbyist needs), and only fragmentary information in other sources, I was overjoyed to find Alex Katovsky's project to do this:
+This is constructed without the benefit of the formal specs, as they're a bit expensive for the hobbyist (e.g. http://www.iso.org/iso/iso_catalogue/catalogue_tc/catalogue_detail.htm?csnumber=18902).
 
-http://www.a-kat.com/programming/cpp/jpeg/JPEGDump.html
-http://www.facebook.com/alexander.katovsky
+I've used references from various sources:
+Very usefully has been Alex Katovsky's jpegdump project:
+	http://www.a-kat.com/programming/cpp/jpeg/JPEGDump.html
+	http://www.facebook.com/alexander.katovsky
+Others:
+* http://www.bsdg.org/swag/GRAPHICS/0143.PAS.html
+* http://www.cs.clemson.edu/~westall/481/notes/jpegimage.pdf
+
