Finally, finally, finally. Dht done.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,3 @@
-* Dht
 * appn
 * Test JunkSegment
 * Test DataSegment
@@ -11,8 +10,8 @@
 	* length and internal data say different things
 	* internal data has invalid values (we could allow)
   * Reconsider how markers are done (instance or static method)
-  * readFromFile/Stream methods maybe should be static also?  Certainly, they need to be able to return
-    different classes based on the type.
+  * readFromFile/Stream methods maybe should be static also?  Certainly, they need to be able to return different classes based on the type.
+	* Maybe this should be doing the java serialization scheme?
 
 * In JpegParser
 ** what should isValid do?
