--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,8 @@
-* appn
 * Test JunkSegment
 * Test DataSegment
 * Comment should copde with utf8 and > 1024 bytes
 * Can DQT have more than 1K of data?  if so, deal with it
+* Can we explain the other structures as well as Dht?
 * Architecture changes
   * Deal with imperfect data better
 	* EOF or length too long: ?
